# fwupd

./: .clang-format  build_deb  build_rpm  fwupd-development.md  meson.build  meson_options.txt
.github/workflows/: main.yml
contrib/: fwupd.spec.in  generate-version-script.py  meson.build
contrib/ci/: Dockerfile  build_freebsd_package.sh  debian.sh  fedora.sh  fedora30.md
contrib/debian/: control.in  fwupd-qubes-vm-whonix.install  not-installed  rules
contrib/freebsd/: Makefile  distinfo  pkg-plist
contrib/qubes/: README.md  meson.build
contrib/qubes/doc/: heads_update.md  uefi_capsule_update.md
contrib/qubes/misc/: 0017-esrt-Add-paravirtualization-support.patch
contrib/qubes/src/: fwupd_receive_updates.py  qubes_fwupdmgr.py
contrib/qubes/src/vms/: fwupd_common_vm.py  fwupd_download_updates.py  fwupd_usbvm_validate.py
contrib/qubes/test/: fwupd_logs.py  test_fwupd_download_updates.py  test_qubes_fwupdmgr.py
contrib/snap/: snapcraft-stable.yaml
docs/: fwupd-demo-doc.md
libfwupd/: fwupd-common.c  fwupd-common.h  fwupd-self-test.c
libfwupdplugin/: fu-common.c  fu-device.c  fu-efivar-freebsd.c  fu-efivar.c  fu-plugin.c  fu-smbios.c  fu-udev-device.c  meson.build
plugins/: meson.build
plugins/dell/: fu-dell-smi.c  fu-plugin-dell.c  fu-self-test.c
plugins/dfu/: meson.build
plugins/dfu-csr/: meson.build
plugins/flashrom/: flashrom.quirk  fu-flashrom-device.c  fu-flashrom-internal-device.c  fu-flashrom-internal-device.h  fu-flashrom-lspcon-i2c-spi-device.c  fu-flashrom-tuxedo-ec-device.c  fu-flashrom-tuxedo-ec-device.h  fu-plugin-flashrom.c  meson.build
src/: fu-device-list.c  fu-engine.c  fu-main.c  fu-plugin-list.c  fu-self-test.c
(+8 files in other folders)
